# Benchmark-Pipeline-Development

./: .gitignore  README.md  benchmark.md  eval_config.json  evaluate_model.py  evaluation_method.md  main.py  pipeline_config.json  pyproject.toml  requirements.txt  run_generation.py  run_pipeline.py  test_dataloader.py
.gemini/commands/: record.toml
.gemini/commands/git/: commit.toml
configs/: pipeline_config.yaml
eval_scripts/: generic_util.py
models/: DummyModelV1.py  DummyModelV2.py  DummyModelV3.py  Fastflow.py  Padim.py  PatchCore.py  __init__.py
scripts/: run_benchmark.py
src/benchmark_pipeline/: config.py  dataset_manager.py  evaluation_runner.py  generation_runner.py  model_handler.py  pipeline.py  utils.py
tests/: test_model_handler.py  test_pipeline.py  test_utils.py
