[project]
name = "benchmark-pipeline-dev-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
    "tifffile>=2025.12.20",
    "tqdm>=4.67.1",
]
